examples/pos/escape_sequences.effekt
def main() = println("\nabc\bdef\tghi")
