examples/neg/multiline_string.effekt
def main() = print("a
b")
